<resources>
    <string name="about">Yoosee is a free app designed for IP camera which is a new generation of smart home product.It uses advanced P2P network transmission technology,remote monitoring,video calling has never been easier,it is the best way to engage with family and friends.</string>
    <string name="about_s">About</string>
    <string name="accept">Accept</string>
    <string name="account">Account</string>
    <string name="account_already_exists_in_mask_list">Shielding account already exists</string>
    <string name="account_info">My Account</string>
    <string name="account_no_exist">Account does not exist</string>
    <string name="add_contact">Add to device list</string>
    <string name="add_contacts">Add Device</string>
    <string name="add_success">Add Successfully</string>
    <string name="alarm_control">Alarm Settings</string>
    <string name="alarm_email">Alarm push Email</string>
    <string name="alarm_id_must_first_with_zero">Alarm push  ID is your APP user ID</string>
    <string name="alarm_id_too_long">Alarm ID must be no more than 9 character</string>
    <string name="alarm_info">Alarm Info</string>
    <string name="alarm_manager">Alarm Management</string>
    <string name="alarm_mask">Blocking List</string>
    <string name="alarm_mask_id_too_long">Device ID length must be no more than 9 character</string>
    <string name="alarm_record">Alarm logs</string>
    <string name="alarm_time_interval">Alarm Interval(seconds)</string>
    <string name="all_tel">Device list</string>
    <string name="allarm_ring">Alarm Ring</string>
    <string name="allarm_robot">Device:</string>
    <string name="allarm_type">Type：</string>
    <string name="allarm_type1">External alarm</string>
    <string name="allarm_type2">Motion Detection</string>
    <string name="allarm_type3">Emergency alarm</string>
    <string name="Allarm_vibrate">Alarm Vibrate</string>
    <string name="already_init_passwd">Add Failed,the password already existed</string>
    <string name="app_name">Yoosee</string>
    <string name="are_you_sure_delete">Confirm to delete</string>
    <string name="area">Defence Area</string>
    <string name="audio_video_control">Media Settings</string>
    <string name="auto_start">Automatically Start</string>
    <string name="balcony">Balcony</string>
    <string name="basic_Info">Basic Information</string>
    <string name="bedroom">Bedroom</string>
    <string name="bell_ring">InComing Ring</string>
    <string name="bell_set">Ringtone</string>
    <string name="binding">Alarm push ID</string>
    <string name="busy">Target id is busy</string>
    <string name="buzzer">Buzzer</string>
    <string name="buzzer_time">Buzzer Time(minute)</string>
    <string name="calling_to">Calling</string>
    <string name="can_update_in_sd">Can update from sd card</string>
    <string name="can_update_to">Can update to</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_shield">UnBlock</string>
    <string name="capture">Snapshot</string>
    <string name="capture_failed">Snapshot failed</string>
    <string name="capture_success">Snapshot OK</string>
    <string name="change">Change</string>
    <string name="change_email">Change Email</string>
    <string name="change_phone">Binding Phone</string>
    <string name="change_wifi">Change Wi-Fi</string>
    <string name="channel">Channel</string>
    <string name="chat">Call</string>
    <string name="check">Check</string>
    <string name="check_device_update">Device Update</string>
    <string name="check_update">Check for update</string>
    <string name="check_version">Update</string>
    <string name="china">China</string>
    <string name="clear">Clear</string>
    <string name="clear_code">Clear</string>
    <string name="clear_code_prompt">Confirm to clear?</string>
    <string name="clear_confirm">Delete recent logs?</string>
    <string name="clear_success">Clear Successfully</string>
    <string name="clearing">Clearing...</string>
    <string name="click_refresh">Tap the screen to refresh</string>
    <string name="comming_vibrate">InComing Vibrate</string>
    <string name="confirm">Ok</string>
    <string name="confirm_clear">Confirm to clear?</string>
    <string name="confirm_clear_chat">Confirm to clear?</string>
    <string name="confirm_delete">Confirm to delete?</string>
    <string name="confirm_exit">Exit apllication?</string>
    <string name="conn_fail">Connect failed</string>
    <string name="connecting_to">Connecting</string>
    <string name="contact_already_exist">Device already exists</string>
    <string name="contact_name">Device Name</string>
    <string name="contact_pwd">Device Password</string>
    <string name="control">Settings</string>
    <string name="courtyard">Courtyard</string>
    <string name="create_pwd">Please input device password</string>
    <string name="create_pwd_prompt">please create a password contain 6~30 characters including alphabetic and numbers</string>
    <string name="current_version">Current Version</string>
    <string name="current_version_is">Current version is</string>
    <string name="customize">Customize</string>
    <string name="day">Day</string>
    <string name="defence">Defence on</string>
    <string name="defence_area_control">Defence Area</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_alarm_id">Delete Alarm Id</string>
    <string name="delete_alarm_records">Delete Alarm Logs</string>
    <string name="delete_contact">Delete Device</string>
    <string name="delete_sys_messages">Delete System Messages</string>
    <string name="device">Add Device</string>
    <string name="device_info">Device Info</string>
    <string name="device_is_latest_version">The current version is the latest</string>
    <string name="device_time">Date and Time</string>
    <string name="device_unsupport_defence_area">The current device does not support Defence Area</string>
    <string name="differentpassword">The password is Inconsistent</string>
    <string name="door_lock">Door Lock</string>
    <string name="down_complete_click">Download is complete, Click Update.</string>
    <string name="down_device_update">Downloading...</string>
    <string name="down_fault">Download Failed</string>
    <string name="down_fault_click">Download fails, Click Remove.</string>
    <string name="down_londing_click">Downloading, Click Cancel. </string>
    <string name="download">Downloading...</string>
    <string name="edit">Edit</string>
    <string name="email_format_error">E-mail format error</string>
    <string name="email_login">By Email/ID</string>
    <string name="email_register">By Email</string>
    <string name="email_too_long">Email must be 3-32 characters in length</string>
    <string name="email_used">E-mail has been registered</string>
    <string name="end_time">End Time</string>
    <string name="ensure">Ok</string>
    <string name="ensure_cancel_shield">Confirm to unblock device</string>
    <string name="ensure_delete">Confirm to delete</string>
    <string name="exit">Exit</string>
    <string name="forget_pwd">Forget your password?</string>
    <string name="format_error">Format Error</string>
    <string name="friend">Add Device</string>
    <string name="gallery">Gallery</string>
    <string name="get_phone_code_too_times">Get phone code too frequently, please try again later</string>
    <string name="hall">Hall</string>
    <string name="has_been_learning">has been coded</string>
    <string name="hour">Hour</string>
    <string name="hungup">hang up</string>
    <string name="id_disabled">Target id is disable</string>
    <string name="id_inactived">Target id is not activated</string>
    <string name="id_overdate">Target id has expired</string>
    <string name="ignore">Ignore</string>
    <string name="ignore_alarm_prompt_start">Will no longer receive alarm info within</string>
    <string name="ignore_alarm_prompt_end">seconds</string>
    <string name="image_size_too_small">Image size is too small</string>
    <string name="input_alarm_mask_id">Please input the alarm device ID</string>
    <string name="input_alarmId">Please input the alarm push ID</string>
    <string name="input_contact_id">Please input device ID</string>
    <string name="input_contact_name">Please input device Name</string>
    <string name="input_contact_pwd">Please input device password</string>
    <string name="input_device_id">Please input device ID</string>
    <string name="input_device_name">Please input device name</string>
    <string name="input_email">Please input your email</string>
    <string name="input_friend_id">Please input device ID</string>
    <string name="input_friend_name">Please input device name</string>
    <string name="input_login_pwd">Please input login password</string>
    <string name="input_monitor_pwd">Please input monitor password</string>
    <string name="input_new_device_pwd">Please input new admin password</string>
    <string name="input_new_pwd">Please input new password</string>
    <string name="input_old_device_pwd">Please input original admin password</string>
    <string name="input_old_pwd">Please input original password</string>
    <string name="input_phone">Please input your phone number</string>
    <string name="input_phone_number">Please input your phone number</string>
    <string name="input_re_new_device_pwd">Please input password again</string>
    <string name="input_tip">Please fill the Account and Password !</string>
    <string name="input_vf_code">Please input phone verification code</string>
    <string name="input_wifi_pwd">Please input Wi-Fi password</string>
    <string name="inputpassword">Please input password</string>
    <string name="internal_error">Internal error</string>
    <string name="ir_control">Infrared Control</string>
    <string name="kernelVersion">kernelVersion</string>
    <string name="kitchen">Kitchen</string>
    <string name="learing_code">Coding</string>
    <string name="learing_code_prompt">Click OK to trigger the wireless sensor to code</string>
    <string name="learning_success">Code Successfully</string>
    <string name="list_wifi">Wi-Fi List</string>
    <string name="loading">Loading...</string>
    <string name="login">Login</string>
    <string name="login_ing">Connecting</string>
    <string name="login_title">Login</string>
    <string name="loginfail">Login failed</string>
    <string name="logout">Sign Out</string>
    <string name="me">me</string>
    <string name="message">Message</string>
    <string name="message_net_connect">Connected to :</string>
    <string name="minutes">Min</string>
    <string name="modify_alarmId">Alarm push ID</string>
    <string name="modify_contacts">Modify Devices</string>
    <string name="modify_device_password">Modify Admin Pwd</string>
    <string name="modify_email">Modify Email</string>
    <string name="modify_login_password">Modify Login Pwd</string>
    <string name="modify_login_pwd">Modify Login Password</string>
    <string name="next">Next</string>
    <string name="phone_verify_prompt">Verification code has been sent to</string>
    <string name="phone_vf_code">Verification Code</string>
    <string name="resend">resend</string>
    <string name="wizard">Register Guide</string>
    <string name="remind_msg">Notice</string>
    <string name="remind_input_wifi_pwd">Notice that you need to verify the password for your Wi-Fi</string>
    <string name="remind_input_wifi_pwd1">Please enter the password</string>
    <string name="bt_determine">Confirm</string>
    <string name="connect_fail_remind">Connection failed </string>
    <string name="reason">Possible cause:</string>
    <string name="reason1">1.Your mobile device is not at the same LAN network with camera</string>
    <string name="reason2">2.Camera is unable to connect to Wi-Fi</string>
</resources>