<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/remind_dialog">
       <TextView 
           android:id="@+id/tv_connect_failed"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:text="@string/connect_fail_remind"
           android:textColor="@color/text_color_black"
           android:textSize="@dimen/text_size_normal"/>
      <ImageView 
           android:id="@+id/img_connect_failed"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@+id/tv_connect_failed"
           android:background="@drawable/remind_line"/>
      <TextView 
          android:id="@+id/tv_reason"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/img_connect_failed"
          android:layout_alignParentLeft="true"
          android:text="@string/reason"
          android:textColor="@color/text_color_red"/>
      <TextView 
          android:id="@+id/tv_reason1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/tv_reason"
          android:layout_marginLeft="20dp"
          android:text="@string/reason1"
          android:textColor="@color/text_color_red"/>
      <TextView 
          android:id="@+id/reason2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/tv_reason1"
          android:layout_marginLeft="20dp"
          android:text="@string/reason2"
          android:textColor="@color/text_color_red"/>
      <Button 
          android:id="@+id/bt_determine"
          android:layout_width="@dimen/bt_determine_width"
          android:layout_height="@dimen/bt_determine_heght"
          android:background="@drawable/hear"
          android:layout_centerHorizontal="true"
          android:layout_alignParentBottom="true"
          android:text="@string/bt_determine"
          android:textColor="@color/text_color_white"
          android:textSize="@dimen/text_size_comfirm"/>
</RelativeLayout>