<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="180dp"
    android:orientation="vertical"
    
    android:paddingBottom="5dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:text="@string/inputpassword"
                android:id="@+id/inputtip" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="5dip"
       			android:layout_marginRight="5dip"
                android:layout_below="@id/inputtip"
                android:inputType="number"
                android:textSize="16dip" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <Button
            android:id="@+id/btnExitOK"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_dialog_ok"
            android:text="@string/ensure" />

        <Button
            android:layout_toRightOf="@+id/btnExitOK"
            android:layout_marginLeft="20dp"
            android:id="@+id/btnExitCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_dialog_cancel"
            android:text="@string/cancel" />
    </RelativeLayout>

</LinearLayout>