<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    >
    	<RelativeLayout
	        android:id="@+id/layout_title"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/title_height"
	        android:background="@drawable/tab_bar"
	        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_centerInParent="true"
            android:text="@string/wizard"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/inner_margin_left"
            android:textSize="@dimen/title_text_size"
            />
    	</RelativeLayout>
    	<RelativeLayout 
    	    android:id="@+id/country"
    	    android:layout_width="match_parent"
    	    android:layout_height="80dp"
    	    android:layout_marginLeft="@dimen/inner_margin_left"
            android:layout_marginRight="@dimen/inner_margin_right"
    	    android:layout_below="@+id/layout_title"
    	    android:layout_marginTop="10dp"
    	    >
    	    <TextView 
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/text_color_blue"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="@string/phone_verify_prompt"
                android:singleLine="true"
                />
    	    <TextView 
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/text_color_blue"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="+8615898587376"
                android:layout_below="@+id/text"
                android:singleLine="true"
                />
    	    
    	</RelativeLayout>
    	<RelativeLayout 
            android:id="@+id/layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country"
            android:layout_marginLeft="@dimen/item_left_right_margin"
            android:layout_marginTop="@dimen/item_group_margin_top"
            >
    	    <RelativeLayout 
    	        android:id="@+id/tag1"
	            android:layout_width="@dimen/verify_code_edit_width"
	            android:layout_height="@dimen/edit_height"
	            android:background="@drawable/corner_tiao_single_bg"
	            android:layout_below="@+id/country"
	            >
	            <EditText 
	                android:id="@+id/verify_code"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:layout_marginLeft="@dimen/inner_margin_left"
	                android:layout_marginRight="@dimen/inner_margin_right"
	                android:textSize="@dimen/text_size_normal"
	                android:textColor="@color/text_color_black"
	                android:gravity="left|center_vertical"
	                android:text=""
	                android:singleLine="true"
	                android:inputType="number"
	                android:background="#00000000"
	                android:hint="@string/phone_vf_code"
	                />
            </RelativeLayout>
            <Button 
                    android:id="@+id/resend"
                    android:layout_width="@dimen/verify_resend_btn_width"
                    android:layout_height="@dimen/verify_resend_btn_height"
                    android:textSize="@dimen/text_size_normal"
            		android:textColor="@color/text_color_blue"
            		android:gravity="center"
            		android:text="@string/resend"
            		android:layout_marginLeft="@dimen/inner_margin_left"
            		android:layout_toRightOf="@+id/tag1"
            		android:layout_centerVertical="true"
            		android:background="@drawable/button_bg_dialog_ok"
                    />
        </RelativeLayout>

    	<Button
    	    android:id="@+id/next"
    	    android:layout_width="match_parent"
            android:layout_height="@dimen/globel_button_height"
            android:layout_below="@+id/layout_username"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/item_left_right_margin"
            android:layout_marginRight="@dimen/item_left_right_margin"
            android:layout_marginTop="@dimen/item_group_margin_top"
            android:background="@drawable/button_bg_dialog_ok"
            android:text="@string/next"
            android:textColor="@color/dialog_title"
            android:textSize="@dimen/text_size_normal"  />
       			
</RelativeLayout>