<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    >
    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/tab_bar"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_centerInParent="true"
            android:text="@string/wizard"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/inner_margin_left"
            android:textSize="@dimen/title_text_size"
            />
    </RelativeLayout>
    	<RelativeLayout 
    	    android:id="@+id/country"
    	    android:layout_width="match_parent"
    	    android:layout_height="@dimen/edit_height"
    	    android:layout_marginLeft="@dimen/item_left_right_margin"
            android:layout_marginRight="@dimen/item_left_right_margin"
    	    android:background="@drawable/tiao_bg_normal"
    	    android:layout_below="@+id/layout_title"
    	    android:layout_marginTop="20dp"
    	    >
    	    <TextView 
                android:id="@+id/count"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/text_color_black"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="+86"
                android:singleLine="true"
                android:background="#00000000"
                />
    	    <ImageView 
    	        android:id="@+id/separator"
    	        android:layout_width="2dp"
    	        android:layout_height="match_parent"
    	        android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/count"
                android:background="#7f7f7f"
    	        />
    	    <TextView 
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/text_color_black"
                android:layout_toRightOf="@+id/separator"
                android:gravity="center"
                android:text="@string/china"
                android:singleLine="true"
                android:background="#00000000"
                />
    	</RelativeLayout>
    	<RelativeLayout 
            android:id="@+id/layout_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:background="@drawable/corner_tiao_single_bg"
            android:layout_below="@+id/country"
            android:layout_marginLeft="@dimen/item_left_right_margin"
            android:layout_marginRight="@dimen/item_left_right_margin"
            android:layout_marginTop="@dimen/item_group_margin_top"
            >
            <EditText 
                android:id="@+id/account_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/inner_margin_left"
                android:layout_marginRight="@dimen/inner_margin_right"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/text_color_black"
                android:gravity="left|center_vertical"
                android:text=""
                android:singleLine="true"
                android:inputType="number"
                android:background="#00000000"
                android:hint="@string/input_phone_number"
                />
            
        </RelativeLayout>

    	<Button
    	    android:id="@+id/next"
    	    android:layout_width="match_parent"
            android:layout_height="@dimen/globel_button_height"
            android:layout_below="@+id/layout_username"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/item_left_right_margin"
            android:layout_marginRight="@dimen/item_left_right_margin"
            android:layout_marginTop="@dimen/item_group_margin_top"
            android:background="@drawable/button_bg_dialog_ok"
            android:text="@string/next"
            android:textColor="@color/dialog_title"
            android:textSize="@dimen/text_size_normal" />
        
</RelativeLayout>